WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240897
[GCC] Debian stable build bot broken after
250926@main
https://bugs.webkit.org/show_bug.cgi?id=240897
Summary
[GCC] Debian stable build bot broken after 250926@main
Diego Pino
Reported
2022-05-24 19:04:13 PDT
`compile-webkit` step ends with the following message error: ``` In file included from ../../Source/WebCore/platform/graphics/FontSelectionAlgorithm.h:28, from ../../Source/WebCore/platform/graphics/FontDescription.h:29, from ../../Source/WebCore/platform/graphics/FontCascadeDescription.h:28, from ../../Source/WebCore/platform/graphics/harfbuzz/FontDescriptionHarfBuzz.cpp:27: ../../Source/WebCore/platform/text/TextFlags.h:101:42: warning: ‘WebCore::ExpansionBehavior::left’ is too small to hold all values of ‘enum class WebCore::ExpansionBehavior::Behavior’ Behavior left : 2 { Behavior::Forbid }; ^ ../../Source/WebCore/platform/text/TextFlags.h:102:42: warning: ‘WebCore::ExpansionBehavior::right’ is too small to hold all values of ‘enum class WebCore::ExpansionBehavior::Behavior’ Behavior right : 2 { Behavior::Allow }; ^ ../../Source/WebCore/platform/text/TextFlags.h:101:42: error: cannot convert ‘<brace-enclosed initializer list>’ to ‘unsigned char:2’ in initialization Behavior left : 2 { Behavior::Forbid }; ^ ../../Source/WebCore/platform/text/TextFlags.h:102:42: error: cannot convert ‘<brace-enclosed initializer list>’ to ‘unsigned char:2’ in initialization Behavior right : 2 { Behavior::Allow }; ^ ```
https://build.webkit.org/#/builders/46/builds/13794
Attachments
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2022-05-24 19:13:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1001
EWS
Comment 2
2022-05-24 19:54:32 PDT
Committed
r294785
(
250944@main
): <
https://commits.webkit.org/250944@main
> Reviewed commits have been landed. Closing PR #1001 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-24 19:55:16 PDT
<
rdar://problem/93875069
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug