[GCC] Debian stable build bot broken after 250926@main https://bugs.webkit.org/show_bug.cgi?id=240897

Reviewed by Cameron McCormack.

GCC8.3 (Debian 10) doesn't support direct brace enclosed initialization of
bitfield enums.

* Source/WebCore/platform/text/TextFlags.h: Move initialization of
  bitfield enums to constructor.

Canonical link: https://commits.webkit.org/250944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294785 268f45cc-cd09-0410-ab3c-d52691b4dbfc